aligned image fix

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ strong {
 }
 .wrapper > div {
     width: 100vw;
-    height: 700px;
+    height: 89vh;
     position: absolute;
     top: -100px;
     animation: animate 25s infinite;
@@ -299,15 +299,6 @@ strong {
     }
 }
 
-@media (max-height: 810px) {
-    .wrapper > div {
-        height: 600px;
-    }
-    .top-line {
-        top: px;
-    }
-}
-
 @media (max-height: 755px) {
     .social-media-tags {
         top: 350px;
@@ -364,26 +355,3 @@ strong {
       }
 }
 
-@media (min-height: 792px) {
-    .top-line {
-        top: -270px;
-    }
-}
-
-@media (min-height: 617px) {
-    .top-line {
-        top: -300px;
-    }
-}
-
-@media (max-height: 682px) {
-    .top-line {
-        top: -260px;
-    }
-}
-
-@media (max-height: 600px) {
-    .top-line {
-        top: -240px;
-    }
-}
